Fixed spacing in projects hover box - desktop

--- a/src/styles/contact.scss
+++ b/src/styles/contact.scss
@@ -13,10 +13,10 @@ $breakpoint-ipadpro: 1024px;
   vertical-align: middle;
   justify-content: center;
   // line-height: normal;
-  // text-align: center;
+  text-align: center;
   margin: auto;
   width: 50%;
-  padding: 60px 20px 20px;
+  padding: 120px 20px 20px;
   .icon {
     padding: 5px;
     height: 50px;
