--- a/src/styles/projects.scss
+++ b/src/styles/projects.scss
@@ -56,14 +56,14 @@ h2 {
 }
 
 .text {
-  padding: 20px;
-  margin-top: 50px;
+  padding: 10px;
+  margin-top: 40px;
   background-color: lightgrey;
   color: black;
   font-size: 18px;
   // display: block;
   min-width: 750px;
-  min-height: 320.7px;
+  min-height: 330.7px;
   height: auto;
   // padding: 16px 32px;
 }
